Case Studies Heading Change

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
           <!--Card-->
           <div class="card">
             <div class="cardContent">
-              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalAirNationalGuard">Air National Guard</a></div>
+              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#modalAirNationalGuard">Department of Defense</a></div>
               <div class="cardSubTitle contentHide">/</div>
             </div>
             <div><img class="cardImage" src="images/rsz_home4_ang.png" alt="Screenshot" data-toggle="modal" data-target="#modalAirNationalGuard"/></div>
@@ -381,7 +381,7 @@
           <!--Card-->
           <div class="card">
             <div class="cardContent">
-              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#DataVisualization">Census</a></div>
+              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#DataVisualization">Department of Census</a></div>
               <div class="cardSubTitle contentHide">/</div>
             </div>
             <div><img class="cardImage" src="images/rsz_home4_blueprints_1.jpg" alt="Screenshot" data-toggle="modal" data-target="#DataVisualization"/></div>
@@ -398,7 +398,7 @@
           <!--Card-->
           <div class="card">
             <div class="cardContent">
-              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#WebTransformation">United States Army Corps of Engineers</a></div>
+              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#WebTransformation">Department of Defense</a></div>
               <div class="cardSubTitle contentHide">/</div>
             </div>
             <div><img class="cardImage" src="images/rsz_home4_usace.jpg" alt="Screenshot" data-toggle="modal" data-target="#WebTransformation"/></div>
@@ -415,7 +415,7 @@
           <!--Card-->
           <div class="card">
             <div class="cardContent">
-              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#MaterialModel">National Institutes of Health</a></div>
+              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#MaterialModel">Department of Health and Human Services</a></div>
               <div class="cardSubTitle contentHide">/</div>
             </div>
             <div><img class="cardImage" src="images/rsz_home4_flasks.jpg" alt="Screenshot" data-toggle="modal" data-target="#MaterialModel"/></div>
@@ -449,7 +449,7 @@
           <!--Card-->
           <div class="card">
             <div class="cardContent">
-              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#CensusForward">Intelligence Community</a></div>
+              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#CensusForward">Department of Defense</a></div>
               <div class="cardSubTitle contentHide">/</div>
             </div>
             <div><img class="cardImage" src="images/rsz_home1_panel3_1.jpg" alt="Screenshot" data-toggle="modal" data-target="#CensusForward"/></div>
@@ -466,7 +466,7 @@
           <!--Card-->
           <div class="card">
             <div class="cardContent">
-              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#NIHInnovation">Army Material Development Model</a></div>
+              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#NIHInnovation">Department of Defense</a></div>
               <div class="cardSubTitle contentHide">/</div>
             </div>
             <div><img class="cardImage" src="images/rsz_home4_soldier_1.jpg" alt="Screenshot" data-toggle="modal" data-target="#NIHInnovation"/></div>
@@ -483,7 +483,7 @@
           <!--Card-->
           <div class="card">
             <div class="cardContent">
-              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#ArmyTransition">Help U.S Army Transition to a Scalable Enterprise Service</a></div>
+              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#ArmyTransition">Department of Defense</a></div>
               <div class="cardSubTitle contentHide">/</div>
             </div>
             <div><img class="cardImage" src="images/rsz_home3_defense.jpg" alt="Screenshot" data-toggle="modal" data-target="#ArmyTransition"/></div>
@@ -500,7 +500,7 @@
           <!--Card-->
           <div class="card">
             <div class="cardContent">
-              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#Intelligence">Agile Intelligence Integration and Data Visualization</a></div>
+              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#Intelligence">Department of Defense</a></div>
               <div class="cardSubTitle contentHide">/</div>
             </div>
             <div><img class="cardImage" src="images/rsz_home1_panel3_1.jpg" alt="Screenshot" data-toggle="modal" data-target="#Intelligence"/></div>
@@ -517,7 +517,7 @@
           <!--Card-->
           <div class="card">
             <div class="cardContent">
-              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#ForestService">US Forrest Service</a></div>
+              <div class="cardTitle" ><a href="#" data-toggle="modal" data-target="#ForestService">Department of Agriculture</a></div>
               <div class="cardSubTitle contentHide">/</div>
             </div>
             <div><img class="cardImage" src="images/rsz_home4_forest.jpg" alt="Screenshot" data-toggle="modal" data-target="#ForestService"/></div>
@@ -782,7 +782,7 @@
           <div class="row modalRow">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <div class="col-md-12 modalLeft modal-case">
-              <div class="modalTitle modal-MainHeading">Air National Guard</div>
+              <div class="modalTitle modal-MainHeading">Department of Defense</div>
               <div class="modalHeading modal-Heading">The Problem:</div>
               <div class="modalText modal-Text">The U.S. Air National Guard (ANG) Recruiting and Retention resources are constantly ensuring that the best and brightest are brought in to serve our country. ANG’s Recruiting and Retention personnel are distributed across 54 states and territories and to manage the complexities associated with such a wide-spread workforce, ANG had begun work on a platform to organize data and business intelligence dissemination and collection efforts. ANG realized that significantly more value could be gained by continuing to grow this platform.</div>
               <div class="modalHeading modal-Heading">The Solution:</div>
@@ -809,7 +809,7 @@
         <div class="row modalRow">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <div class="col-md-12 modalLeft modal-case">
-            <div class="modalTitle modal-MainHeading">Census</div>
+            <div class="modalTitle modal-MainHeading">Department of Census</div>
             <div class="modalHeading modal-Heading">The Problem:</div>
             <div class="modalText modal-Text">The Economic Census involves collecting and processing information from more than 21 million businesses. Moving forward to 2012 and beyond, the leadership realized that the program needed to evaluate the architecture of the system and determine a new target state.</div>
             <div class="modalHeading modal-Heading">The Solution:</div>
@@ -833,7 +833,7 @@
       <div class="row modalRow">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <div class="col-md-12 modalLeft modal-case">
-          <div class="modalTitle modal-MainHeading">United States Army Corps of Engineers</div>
+          <div class="modalTitle modal-MainHeading">Department of Defense</div>
           <div class="modalHeading modal-Heading">The Problem:</div>
           <div class="modalText modal-Text">The United States Army Corps of Engineers (USACE) builds and maintains America’s infrastructure and is responsible for the management of over $4.8 billion in projects. In order to ensure disciplined project management, USACE deployed the Promise2 (P2) system, which is fully integrated with the USACE financial management and contract management systems. The P2 system has not effectively adapted to the changing USACE requirements and shift to USACE overall strategy resulting in significant impact to user satisfaction and stakeholder objectives.</div>
           <div class="modalHeading modal-Heading">The Solution:</div>
@@ -860,7 +860,7 @@
       <div class="row modalRow">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <div class="col-md-12 modalLeft modal-case">
-          <div class="modalTitle modal-MainHeading">National Institutes of Health</div>
+          <div class="modalTitle modal-MainHeading">Department of Health and Human Services</div>
           <div class="modalHeading modal-Heading">The Problem:</div>
           <div class="modalText modal-Text">The National Heart Lung and Blood Institutes (NHLBI) has been undergoing a massive transformation to improve how IT is being used to support the mission of the agency with an emphasis on implementing enterprise capabilities for both Intramural and Extramural research.</div>
           <div class="modalHeading modal-Heading">The Solution:</div>
@@ -911,7 +911,7 @@
       <div class="row modalRow">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <div class="col-md-12 modalLeft modal-case">
-          <div class="modalTitle modal-MainHeading">Intelligence Community</div>
+          <div class="modalTitle modal-MainHeading">Department of Defense</div>
           <div class="modalHeading modal-Heading">The Problem:</div>
           <div class="modalText modal-Text">Octo’s Intelligence Community (IC) customer serves a broad array of customers through 100+ top level internet domains with no common structure or brand. The current structure does not meet customer needs and costs to maintain these web presences are not sustainable.</div>
           <div class="modalHeading modal-Heading">The Solution:</div>
@@ -935,7 +935,7 @@
       <div class="row modalRow">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <div class="col-md-12 modalLeft modal-case">
-          <div class="modalTitle modal-MainHeading">Army Material Development Model</div>
+          <div class="modalTitle modal-MainHeading">Department of Defense</div>
           <div class="modalHeading modal-Heading">The Problem:</div>
           <div class="modalText modal-Text">The Army is challenged with acquiring and implementing Enterprise-wide IT capabilities and services across multiple Combatant Commands. Project Manager Installation, Information, Infrastructure, Communications and Capabilities (PM I3C2) manages a global portfolio as a critical part of the Army's initiative to transform its IT Enterprise into a single, cohesive force deployment enabler.</div>
           <div class="modalHeading modal-Heading">The Solution:</div>
@@ -959,7 +959,7 @@
       <div class="row modalRow">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <div class="col-md-12 modalLeft modal-case">
-          <div class="modalTitle modal-MainHeading">Help U.S Army Transition to a Scalable Enterprise Service</div>
+          <div class="modalTitle modal-MainHeading">Department of Defense</div>
           <div class="modalHeading modal-Heading">The Problem:</div>
           <div class="modalText modal-Text">Project Director Enterprise Services provides management and oversight of the enterprise IT services for the Army. The trailblazing migration to DoD Enterprise Email required transitioning of over 100 legacy email environments to a centrally managed service provided by DISA.</div>
           <div class="modalHeading modal-Heading">The Solution:</div>
@@ -983,7 +983,7 @@
       <div class="row modalRow">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <div class="col-md-12 modalLeft modal-case">
-          <div class="modalTitle modal-MainHeading">Agile Intelligence Integration and Data Visualization</div>
+          <div class="modalTitle modal-MainHeading">Department of Defense</div>
           <div class="modalHeading modal-Heading">The Problem:</div>
           <div class="modalText modal-Text">Our client’s mission operations center is responsible for enterprise-wide Intelligence Watch activities. Incongruent data sources and manual processes have led to unacceptable analysis quality and response times.</div>
           <div class="modalHeading modal-Heading">The Solution:</div>
@@ -1007,7 +1007,7 @@
       <div class="row modalRow">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <div class="col-md-12 modalLeft modal-case">
-          <div class="modalTitle modal-MainHeading">US Forest Service</div>
+          <div class="modalTitle modal-MainHeading">Department of Agriculture</div>
           <div class="modalHeading modal-Heading">The Problem:</div>
           <div class="modalText modal-Text">The Forest Service is highly dispersed with a workforce of 40,000+ and work is accomplished through 900 field offices located all across North America. The agency needed to migrate its messaging systems and services from an internal Lotus Notes and Domino environment to a Microsoft cloud-based application suite.  The major challenges facing the project team were related to (1) technology deployment and transition from Notes to Exchange, (2) effective communications and change management with a geographically disperse workforce, (3) training in the new application suite,  and (4) implementing the new messaging services while a large portion of the workforce is focused on mission-critical support for fire season.</div>
           <div class="modalHeading modal-Heading">The Solution:</div>
