--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <hr/>
       <div class="btn-group-vertical filterGroup" role="group">
         <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Applications<img class="menuIcon" src="images/microservices-icon.svg" alt="Microservices Icon"/></button>
- 		    <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Whitepapers<img class="menuIcon" src="images/api.svg" alt="API Icon"/></button>
+ 		    <!--<button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Whitepapers<img class="menuIcon" src="images/api.svg" alt="API Icon"/></button>-->
         <button type="button" class="btn btn-default menuBtn"><span class="fa fa-square-o checkBox"></span>Case Studies<img class="menuIcon" src="images/book-5.svg" alt="Case Studies"/></button>
     </div>
       <div class="btn-group-vertical filterGroup" role="group">
@@ -104,7 +104,7 @@
               <ol class="carousel-indicators">
                 <li data-target="#carouselMain" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselMain" data-slide-to="1"></li>
-                <li data-target="#carouselMain" data-slide-to="2"></li>
+                <!--<li data-target="#carouselMain" data-slide-to="2"></li>-->
               </ol>
 
               <!-- Wrapper for slides -->
@@ -129,7 +129,7 @@
                     <button type="button" class="btn btn-primary actionBtn">VIEW CASE STUDIES</button>
                   </div>
                 </div>
-                <div class="item">
+                <!--<div class="item">
                   <img src="images/splash-img.png" alt="...">
                   <div class="carousel-caption">
                   	<div class="splashText">
@@ -138,7 +138,7 @@
                     </div>
                     <button type="button" class="btn btn-primary actionBtn">VIEW WHITEPAPERS</button>
                   </div>
-                </div>
+                </div>-->
               </div>
 
               <!-- Controls -->
@@ -166,7 +166,7 @@
               </button>
               <ul class="dropdown-menu">
                 <li><button type="button" class="btn btn-default dropBtn"><span class="fa fa-square-o checkBox"></span>Applications<img class="menuIcon" src="images/microservices-icon.svg" alt="Microservices Icon"/></button></li>
-                <li><button type="button" class="btn btn-default dropBtn"><span class="fa fa-square-o checkBox"></span>Whitepapers<img class="menuIcon" src="images/api.svg" alt="API Icon"/></button></li>
+                <!--<li><button type="button" class="btn btn-default dropBtn"><span class="fa fa-square-o checkBox"></span>Whitepapers<img class="menuIcon" src="images/api.svg" alt="API Icon"/></button></li>-->
                 <li><button type="button" class="btn btn-default dropBtn"><span class="fa fa-square-o checkBox"></span>Case Studies<img class="menuIcon" src="images/book-5.svg" alt="Case Studies"/></button></li>
               </ul>
             </div>
@@ -525,8 +525,8 @@
           </div>
           <!--Card End-->
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3 intelligence-community whitepapers" id="card">
-          <!--Card-->
+          <!--<div class="col-sm-6 col-md-4 col-lg-3 intelligence-community whitepapers" id="card">
+
           <div class="card">
             <div class="cardContent">
               <div class="cardTitle" ><a href="whitepapers/UXD White Paper - Octo Consulting Group-U-FOUO Final.pdf" target="new" >UX Design Whitepaper</a></div>
@@ -541,8 +541,8 @@
               <div class="cardThumb fa fa-thumbs-up"> 230</div><div class="cardEye fa fa-eye"> 2600</div><a href="whitepapers/UXD White Paper - Octo Consulting Group-U-FOUO Final.pdf" target="new" class="cardButton">DOWNLOAD</a>
             </div>
           </div>
-          <!--Card End-->
-          </div>
+
+          </div>-->
           </div>
           <!--Footer-->
           <div class="row">
