--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <div id="modalLeft" class="col-md-12">
               <div class="modalTitle">About</div>
-              <div class="modalText">We are a digital workforce that pride ourselves in designing and building tools and solutions that cater to the general public. We use a strong mix of technologies (Open Source when possible) and practices (like Dev Ops, Agile and Lean UX) to craft solutions that meet our customer’s needs and are easy to use.</br></br>For more information on our overall corporate capabilities, please visit: <a href="www.octoconsulting.com">www.octoconsulting.com</a></br></br>For more information on our incubation and innovation lab projects, please visit:</br></br><a href="labs.octoconsulting.com">labs.octoconsulting.com</a></div>
+              <div class="modalText">We are a digital workforce that pride ourselves in designing and building tools and solutions that cater to the general public. We use a strong mix of technologies (Open Source when possible) and practices (like Dev Ops, Agile and Lean UX) to craft solutions that meet our customer’s needs and are easy to use.</br></br>For more information on our overall corporate capabilities, please visit: <a href="http://www.octoconsulting.com/">www.octoconsulting.com</a></br></br>For more information on our incubation and innovation lab projects, please visit:</br></br><a href="http://labs.octoconsulting.com/">labs.octoconsulting.com</a></div>
             </div>
   	      </div>
         </div>
