--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
             </div>
             <div><img class="cardImage" src="images/rsz_home4_forest.jpg" alt="Screenshot" data-toggle="modal" data-target="#ForestService"/></div>
            	<div class="cardContent">
-              <div class="cardCatagory">Octo's Case Study on US Forrest Service</div>
+              <div class="cardCatagory">Octo's Case Study on US Forest Service</div>
               <img class="capabilityIcons" />
            	</div>
             <div class="cardFooter">
